--- a/layouts/footer.html
+++ b/layouts/footer.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Fotter</title>
+    <link href="../assests/css/footer.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
     
