--- a/assests/css/sucess.css
+++ b/assests/css/sucess.css
@@ -1,9 +1,12 @@
+/*deixando os itens centralizados*/
 body{
     text-align: center;
     margin-top: 14%;
+/*mudando a cor do botão*/
 }
 input{
     background-color: white;
+/*alterando a cor do botão quando passar o cursor por cima do botão*/
 }
 #voltar:hover{
     background-color: goldenrod;
