--- a/layouts/header.html
+++ b/layouts/header.html
@@ -5,10 +5,21 @@
     <title>sim eu to maluco</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="../assests/css/header.css">
+    <link rel="icon" type="image/x-icon" href="../assests/images/logo.png">
 </head>
+
 <body>
     <header>
-        <img src="../assests/images/logo.png">
+        <a href="../menu.html" target="_parent">
+            <img src="../assests/images/logo.png" width="64" height="64" id="img1">
+        </a>
+        <nav>
+            <ul>
+                <li><a href="../menu.html" target="_parent" id="nav1">Home</a></li>
+                <li><a href="../pages/contato.html" target="_parent" id="nav1">Feedback</a></li>
+            </ul>
+        </nav>
     </header>
 </body>
+
 </html>
