--- a/layouts/footer.html
+++ b/layouts/footer.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Fotter</title>
-    <link href="../assests/css/footer.css" rel="stylesheet" type="text/css"/>
+    <link href="../assests/css/footer.css" rel="stylesheet" type="text/css" />
 </head>
+
 <body>
-    
+    <footer>
+        <a href="https://linktr.ee/psiomega.01" target="_parent"><img src="../assests/images/76 Sem Título_20230306134406.png" height="64"
+                width="64" alt="Logo do nosso Linktree" id="candyshop"></a>
+        <p id="paragrafo1">Todos os direitos reservados © 2023</p>
+    </footer>
 </body>
+
 </html>
