--- a/assests/css/menu.css
+++ b/assests/css/menu.css
@@ -4,3 +4,8 @@ body {
     font-size: 12;
     margin: 0%;
 }
+#img {
+    border-style: groove 10px;
+    border-radius: 10px;
+    text-align: center;
+}
