--- a/assests/css/header.css
+++ b/assests/css/header.css
@@ -8,7 +8,7 @@ body {
 header {
     margin: 0;
     padding: 0;
-    background-color:black;
+    background-image:linear-gradient(gray, black);
     width:100%;
     height:100%;
     position:fixed;
