--- a/assests/css/sucess.css
+++ b/assests/css/sucess.css
@@ -1,7 +1,6 @@
 /*deixando os itens centralizados*/
 body{
     text-align: center;
-    margin-top: 8%;
 /*mudando a cor do botão*/
 }
 input{
@@ -9,5 +8,9 @@ input{
 /*alterando a cor do botão quando passar o cursor por cima do botão*/
 }
 #voltar:hover{
+    background-color: white;
+}
+#voltar{
     background-color: goldenrod;
+    border: none;
 }
