Adição imagens no menu.html e estilização

--- a/assests/css/menu.css
+++ b/assests/css/menu.css
@@ -25,3 +25,9 @@
 body {
     background-color: whitesmoke;
 }
+
+.imagens123456 {
+    border-radius:100%;
+    margin-top:5%;
+    margin-left:1%;
+}
