--- a/assests/css/menu.css
+++ b/assests/css/menu.css
@@ -5,7 +5,14 @@ body {
     margin: 0%;
 }
 #img {
-    border-style: groove 10px;
-    border-radius: 10px;
+    display: flex;
+    background-color:antiquewhite;
     text-align: center;
+    padding: 5%;
+}
+#img2 {
+    display: flex;
+    background-color: antiquewhite;
+    text-align: center;
+    padding: 5%;
 }
