estilização do nome da Marrie

--- a/assests/css/menu.css
+++ b/assests/css/menu.css
@@ -28,6 +28,11 @@ body {
 
 .imagens123456 {
     border-radius:100%;
-    margin-top:5%;
     margin-left:1%;
+}
+
+h1 {
+    margin: 0;
+    padding: 0;
+    margin-left:2%;
 }
