--- a/assests/css/menu.css
+++ b/assests/css/menu.css
@@ -7,7 +7,7 @@ body {
 #img {
     display: flex;
     background-color:antiquewhite;
-    text-align: center;
+    text-align: right;
     padding: 5%;
     border: solid;
     border-radius: 5%;
@@ -17,6 +17,10 @@ body {
     background-color: antiquewhite;
     text-align: center;
     padding: 5%;
+    color: rgb(100, 98, 96);
     border: solid;
     border-radius: 5%;
+}
+#p1 {
+    text-align:justify;
 }
