--- a/assests/css/footer.css
+++ b/assests/css/footer.css
@@ -1,9 +1,11 @@
+/*Estilização do corpo do footer*/
 body {
     bottom: 0%;
     margin: 0%;
     padding: 0%;
 }
 
+/*Estilização do nosso rodapé*/
 footer {
     background-color: black;
     color: whitesmoke;
@@ -14,10 +16,12 @@ footer {
     width: 100%;
 }
 
+/*Descrição dos direitos reservados*/
 #paragrafo1 {
     margin-top: 1%;
 }
 
+/*Imagem em linktree*/
 #candyshop {
     margin-top: 1%;
     height: 4%;
