footer html comentários

--- a/layouts/footer.html
+++ b/layouts/footer.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <footer>
+    <footer><!--Rodapé da página com o nosso linktree-->
         <a href="https://linktr.ee/psiomega.01" target="_parent"><img src="../assests/images/76 Sem Título_20230306134406.png" height="64"
                 width="64" alt="Logo do nosso Linktree" id="candyshop"></a>
         <p id="paragrafo1">Todos os direitos reservados © 2023</p>
