--- a/assests/css/menu.css
+++ b/assests/css/menu.css
@@ -1,7 +1,8 @@
 /*aqui é estilização do banner com a promoção principal*/
 body {
-    background-color: whitesmoke;
+    background-color: #f5f5f5;
 }
+
 #art1 {
     background-color: bisque;
     display: flex;
@@ -11,6 +12,7 @@ body {
     margin: auto;
     ;
 }
+
 /*estilizção do conteudo no banner da promoção principal*/
 #promo1 {
     margin-left: 10%;
@@ -19,6 +21,7 @@ body {
     margin-bottom: 2%;
     border: 5px 5px outset grey;
 }
+
 #promo01 {
     width: 80%;
     margin-top: 2%;
@@ -28,27 +31,35 @@ body {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 14px;
     margin-right: 2%;
-   
+
 }
+
 /*Estilização dos banners com as imagens e descrição dos produtos do nosso cardápio*/
 #a01 {
     display: flex;
     flex-direction: column;
     width: 33%;
-    background-color: bisque;
+    background-color: #ffe4c4;
     text-align: justify;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     margin-top: 3%;
     margin: 3%;
     align-items: center;
+    border-color: black;
+    border: 5px double;
+    -webkit-box-shadow: 10px 10px 14px 4px rgba(0, 0, 0, 0.47);
+    -moz-box-shadow: 10px 10px 14px 4px rgba(0, 0, 0, 0.47);
+    box-shadow: 10px 10px 14px 4px rgba(0, 0, 0, 0.47);
 }
+
 main {
     display: flex;
     width: 99%;
     margin: auto;
     background-color: whitesmoke;
 }
- section {
+
+section {
     width: 80%;
     margin-top: 3%;
- }
+}
