--- a/assests/css/menu.css
+++ b/assests/css/menu.css
@@ -6,12 +6,14 @@ body {
 #art1 {
     background-color: bisque;
     display: flex;
-    box-shadow: 10px 5px grey;
     height: auto;
-    width: 80%;
-    margin: auto;
-    ;
+    width: 90%;
+    margin: auto; 
+    -webkit-box-shadow: 10px 10px 14px 4px rgba(0, 0, 0, 0.47);
+    -moz-box-shadow: 10px 10px 14px 4px rgba(0, 0, 0, 0.47);
+    box-shadow: 10px 10px 14px 4px rgba(0, 0, 0, 0.47);
 }
+
 
 /*estilizção do conteudo no banner da promoção principal*/
 #promo1 {
