--- a/assests/css/contato.css
+++ b/assests/css/contato.css
@@ -49,7 +49,8 @@ input {
 }
 /* estilização da página em geral*/
 body {
-    margin-top: 8%;
+    margin: 0%;
+
 }
 /* estilização dos títulos das caixas de texto*/
 #label {
