--- a/assests/css/menu.css
+++ b/assests/css/menu.css
@@ -77,7 +77,7 @@ section {
     width: 33%;
     margin:1%;
     border-radius:10px;
-    border-left:7px goldenrod solid ;
+    border-left:7px black double ;
     color:black;
     -webkit-box-shadow: 10px 10px 14px 4px rgba(0, 0, 0, 0.47);
     -moz-box-shadow: 10px 10px 14px 4px rgba(0, 0, 0, 0.47);
@@ -90,7 +90,7 @@ section {
     width: 33%;
     margin:1%;
     border-radius:10px;
-    border-left:7px goldenrod solid ;
+    border-left:7px black double ;
     color:black;
     -webkit-box-shadow: 10px 10px 14px 4px rgba(0, 0, 0, 0.47);
     -moz-box-shadow: 10px 10px 14px 4px rgba(0, 0, 0, 0.47);
