--- a/assests/css/footer.css
+++ b/assests/css/footer.css
@@ -1,11 +1,8 @@
-/*Estilização do corpo do footer*/
 body {
-    bottom: 0%;
-    margin: 0%;
-    padding: 0%;
-    background-color: black;
+    margin:0;
+    border: 0;
+    padding: 0;
 }
-
 /*Estilização do nosso rodapé*/
 footer {
     background-image:linear-gradient(gray, black);
@@ -15,6 +12,8 @@ footer {
     width: 100%;
     height: auto;
     margin-top: 0%;
+    position: fixed;
+    bottom:0;
 }
 
 /*Descrição dos direitos reservados*/
