correção dos erros no menu.css novamente

--- a/assests/css/menu.css
+++ b/assests/css/menu.css
@@ -131,3 +131,12 @@ section {
     margin-right:2%;
     margin-left: 2%;
 }
+
+#text1a6 {
+    text-align: justify;
+    margin:3%;
+}
+
+#titles1a6 {
+    margin: 2%;
+}
