--- a/assests/css/menu.css
+++ b/assests/css/menu.css
@@ -12,6 +12,8 @@ body {
     -webkit-box-shadow: 10px 10px 14px 4px rgba(0, 0, 0, 0.47);
     -moz-box-shadow: 10px 10px 14px 4px rgba(0, 0, 0, 0.47);
     box-shadow: 10px 10px 14px 4px rgba(0, 0, 0, 0.47);
+    margin-top: 5%;
+    margin-bottom: 5%;
 }
 
 
