--- a/assests/css/menu.css
+++ b/assests/css/menu.css
@@ -61,16 +61,21 @@ main {
     width: 99%;
     margin: auto;
     background-color: whitesmoke;
+   
 }
 
 section {
     width: 80%;
     margin-top: 3%;
+    margin-bottom: 3%;
 }
 
 /*colocar os sections um do lado do outro*/
 .divisa123 {
     display: flex;
+}
+#mm {
+    margin-top: 5%;
 }
 
 /*feito para colocar a borda na esquerda e estilizar cada uma das sections de maneira padronizada*/
@@ -132,4 +137,8 @@ section {
     text-align: justify;
     margin-right:2%;
     margin-left: 2%;
+}
+hr {
+    border: 6px double black;
+    width: 100%;
 }
